src/objects/MX_SB_VTS_Lead_tray__c.object
<CustomObject>
    <description>Objeto Creado para almacenar las bandejas generadas en los servicios. El objeto es Genérico para la creación de nuevos servicios.</description>
    <fields>
        <fullName>MX_SB_VTS_Campa_a_relacionada__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campaña relacionada a la bandeja</description>
        <inlineHelpText>Ingresa la campaña relacionada.</inlineHelpText>
        <label>Campaña</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Lead_trays</relationshipLabel>
        <relationshipName>Lead_trays</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Description__c</fullName>
        <description>Descripción de las bandejas creadas.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Descripción</inlineHelpText>
        <label>Descripcion</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_ID_Bandeja__c</fullName>
        <description>Id Generado en el servicio.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>ID de servicio generado.</inlineHelpText>
        <label>ID Bandeja</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Producto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Producto Relacionado con la bandeja.</description>
        <inlineHelpText>Inserta el producto relacionado con la bandeja,</inlineHelpText>
        <label>Producto</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Bandejas leads</relationshipLabel>
        <relationshipName>Bandejas_leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_ProveedorCTI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campo relación a proveedor CTI</description>
        <label>ProveedorCTI</label>
        <referenceTo>MX_SB_VTS_ProveedoresCTI__c</referenceTo>
        <relationshipLabel>Bandejas leads</relationshipLabel>
        <relationshipName>Bandejas_leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Tipo_bandeja__c</fullName>
        <description>Tipo de bandeja</description>
        <label>Tipo bandeja HotLeads</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HotLeads</fullName>
                </value>
                <value>
                    <fullName>TrackingWeb</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
	<fields>
        <fullName>MX_SB_VTS_ServicioID__c</fullName>
        <description>ID del servicio relacionado con la bandeja</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>ID del servicio relacionado con la bandeja</inlineHelpText>
        <label>Servicio</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Bandejas lead</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre de la bandeja</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bandejas leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>